--- a/resources/po/en_US.po
+++ b/resources/po/en_US.po
@@ -324,3 +324,5 @@ msgstr "Text Bitmap Font"
 
 msgid "DALI_DEMO_STR_TITLE_WAVES"
 msgstr "Waves"
+msgid "DALI_DEMO_STR_TITLE_SCENE3D_VIEW"
+msgstr "Scene3D View glTF"
