--- a/resources/po/zn_CH.po
+++ b/resources/po/zn_CH.po
@@ -180,3 +180,6 @@ msgstr "Skybox"
 
 msgid "DALI_DEMO_STR_TITLE_PBR"
 msgstr "PBR"
+
+msgid "DALI_DEMO_STR_TITLE_SCENE3D_VIEW"
+msgstr "Scene3D View glTF"
