--- a/resources/po/en_US.po
+++ b/resources/po/en_US.po
@@ -175,6 +175,9 @@ msgstr "Primitive Shapes"
 msgid "DALI_DEMO_STR_TITLE_RADIAL_MENU"
 msgstr "Radial Menu"
 
+msgid "DALI_DEMO_STR_TITLE_REFLECTION"
+msgstr "Reflection"
+
 msgid "DALI_DEMO_STR_TITLE_REFRACTION"
 msgstr "Refraction"
 
