Add color visual example
Change-Id: I7a424bc4bb90f53e2aa4e0a81f90d67550a30563

--- a/resources/po/en_US.po
+++ b/resources/po/en_US.po
@@ -43,6 +43,9 @@ msgstr "Clipping"
 msgid "DALI_DEMO_STR_TITLE_CLIPPING_DRAW_ORDER"
 msgstr "Clipping Draw Order"
 
+msgid "DALI_DEMO_STR_TITLE_COLOR_VISUAL"
+msgstr "Color Visual"
+
 msgid "DALI_DEMO_STR_TITLE_DEFERRED_SHADING"
 msgstr "Deferred Shading"
 
