Added Renderer Filtering example.
Signed-off-by: György Straub <g.straub@partner.samsung.com>

--- a/resources/po/en_GB.po
+++ b/resources/po/en_GB.po
@@ -142,6 +142,9 @@ msgstr "Motion Blur"
 msgid "DALI_DEMO_STR_TITLE_MOTION_STRETCH"
 msgstr "Motion Stretch"
 
+msgid "DALI_DEMO_STR_TITLE_RENDERER_FILTERING"
+msgstr "Renderer Filtering"
+
 msgid "DALI_DEMO_STR_TITLE_NATIVE_IMAGE_SOURCE"
 msgstr "Native Image Source"
 
