--- a/resources/po/as.po
+++ b/resources/po/as.po
@@ -88,6 +88,9 @@ msgstr "অস্পষ্ট"
 msgid "DALI_DEMO_STR_TITLE_MOTION_STRETCH"
 msgstr "বিস্তাৰ"
 
+msgid "DALI_DEMO_STR_TITLE_RENDERER_FILTERING"
+msgstr "Renderer Filtering"
+
 msgid "DALI_DEMO_STR_TITLE_NATIVE_IMAGE_SOURCE"
 msgstr "অইন অনুবিম্ব"
 
