--- a/resources/po/de.po
+++ b/resources/po/de.po
@@ -88,6 +88,9 @@ msgstr "Bewegungsunschärfe"
 msgid "DALI_DEMO_STR_TITLE_MOTION_STRETCH"
 msgstr "Bewegung Strecke"
 
+msgid "DALI_DEMO_STR_TITLE_RENDERER_FILTERING"
+msgstr "Renderer Filtering"
+
 msgid "DALI_DEMO_STR_TITLE_NATIVE_IMAGE_SOURCE"
 msgstr "Nativen Bild"
 
