--- a/resources/po/fi.po
+++ b/resources/po/fi.po
@@ -88,6 +88,9 @@ msgstr "Liikesumennus"
 msgid "DALI_DEMO_STR_TITLE_MOTION_STRETCH"
 msgstr "Liikevenytys"
 
+msgid "DALI_DEMO_STR_TITLE_RENDERER_FILTERING"
+msgstr "Renderer Filtering"
+
 msgid "DALI_DEMO_STR_TITLE_NATIVE_IMAGE_SOURCE"
 msgstr "Natiivi Kuvalähde"
 
