--- a/resources/po/ur.po
+++ b/resources/po/ur.po
@@ -88,6 +88,9 @@ msgstr "دھندلانے کی حرکت"
 msgid "DALI_DEMO_STR_TITLE_MOTION_STRETCH"
 msgstr "کھینچھنے کی حرکت"
 
+msgid "DALI_DEMO_STR_TITLE_RENDERER_FILTERING"
+msgstr "Renderer Filtering"
+
 msgid "DALI_DEMO_STR_TITLE_NATIVE_IMAGE_SOURCE"
 msgstr "نیٹو تصویر"
 
