--- a/resources/po/en_US.po
+++ b/resources/po/en_US.po
@@ -154,6 +154,9 @@ msgstr "Negotiate Size"
 msgid "DALI_DEMO_STR_TITLE_PAGE_TURN"
 msgstr "Page Turn"
 
+msgid "DALI_DEMO_STR_TITLE_PARTICLES"
+msgstr "Particles"
+
 msgid "DALI_DEMO_STR_TITLE_PERF_SCROLL"
 msgstr "Scrolling Performance"
 
