Added Waves example.
- tilt, or if not supported, pan, to rotate light;
- double tap to trigger color transition;

Change-Id: I7de09c65309f6b069566cf330ebf18904d36a885

--- a/resources/po/en_GB.po
+++ b/resources/po/en_GB.po
@@ -283,6 +283,9 @@ msgstr "Skybox"
 msgid "DALI_DEMO_STR_TITLE_PBR"
 msgstr "PBR"
 
+msgid "DALI_DEMO_STR_TITLE_WAVES"
+msgstr "Waves"
+
 msgid "DALI_DEMO_STR_TITLE_WEB_VIEW"
 msgstr "Web View"
 
