Implements CanvasView Example
This is an example of Dali::Toolkit::CanvasView.
This example create a CanvasView control, create a Dali::CanvasRenderer::Shape
and add it.
Basic Primitves (rect, circle, arc) can draw and
various shapes can draw using path command.

Change-Id: Iecce183c90c534e07dd96a580b1ba0a1c78824d9

--- a/resources/po/en_GB.po
+++ b/resources/po/en_GB.po
@@ -28,6 +28,9 @@ msgstr "Bubbles"
 msgid "DALI_DEMO_STR_TITLE_BUTTONS"
 msgstr "Buttons"
 
+msgid "DALI_DEMO_STR_TITLE_CANVAS_VIEW"
+msgstr "Canvas view"
+
 msgid "DALI_DEMO_STR_TITLE_CALL_ACTIVE"
 msgstr "Call Active"
 
