--- a/resources/po/en_US.po
+++ b/resources/po/en_US.po
@@ -28,6 +28,9 @@ msgstr "Bubbles"
 msgid "DALI_DEMO_STR_TITLE_BUTTONS"
 msgstr "Buttons"
 
+msgid "DALI_DEMO_STR_TITLE_CANVAS_VIEW"
+msgstr "Canvas view"
+
 msgid "DALI_DEMO_STR_TITLE_CALL_ACTIVE"
 msgstr "Call Active"
 
