--- a/resources/po/en_US.po
+++ b/resources/po/en_US.po
@@ -193,8 +193,8 @@ msgstr "Refraction"
 msgid "DALI_DEMO_STR_TITLE_RENDERER_STENCIL"
 msgstr "Renderer Stencil"
 
-msgid "DALI_DEMO_STR_TITLE_SIMPLE_VISUALS_CONTROL"
-msgstr "Simple Visuals Control"
+msgid "DALI_DEMO_STR_TITLE_SCENE_LOADER"
+msgstr "Scene Loader"
 
 msgid "DALI_DEMO_STR_TITLE_SCRIPT_BASED_UI"
 msgstr "Script-based UI"
@@ -204,6 +204,9 @@ msgstr "Scroll View"
 
 msgid "DALI_DEMO_STR_TITLE_SIMPLE_SCROLL_VIEW"
 msgstr "Simple Scroll View"
+
+msgid "DALI_DEMO_STR_TITLE_SIMPLE_VISUALS_CONTROL"
+msgstr "Simple Visuals Control"
 
 msgid "DALI_DEMO_STR_TITLE_SPARKLE"
 msgstr "Sparkle"
