--- a/resources/po/en_US.po
+++ b/resources/po/en_US.po
@@ -46,6 +46,9 @@ msgstr "Clipping"
 msgid "DALI_DEMO_STR_TITLE_CLIPPING_DRAW_ORDER"
 msgstr "Clipping Draw Order"
 
+msgid "DALI_DEMO_STR_TITLE_COLOR_TRANSITION"
+msgstr "Color Transition"
+
 msgid "DALI_DEMO_STR_TITLE_COLOR_VISUAL"
 msgstr "Color Visual"
 
