--- a/resources/po/en_GB.po
+++ b/resources/po/en_GB.po
@@ -297,3 +297,6 @@ msgstr "Web View"
 
 msgid "DALI_DEMO_STR_TITLE_ANIMATED_VECTOR_IMAGES"
 msgstr "Animated Vector Images"
+
+msgid "DALI_DEMO_STR_TITLE_ANIMATED_VECTOR_IMAGES_RIVE"
+msgstr "Animated Vector Images Rive"
