--- a/resources/po/en_US.po
+++ b/resources/po/en_US.po
@@ -298,6 +298,9 @@ msgstr "Web View"
 msgid "DALI_DEMO_STR_TITLE_ANIMATED_VECTOR_IMAGES"
 msgstr "Animated Vector Images"
 
+msgid "DALI_DEMO_STR_TITLE_ANIMATED_VECTOR_IMAGES_RIVE"
+msgstr "Animated Vector Images Rive"
+
 msgid "DALI_DEMO_STR_TITLE_TEXT_RENDERER"
 msgstr "Text Renderer"
 
