Adding advanced blending example
Change-Id: Ib81a3376864a98e496ddb73256b698ec6c6f6250

--- a/resources/po/es.po
+++ b/resources/po/es.po
@@ -1,3 +1,6 @@
+msgid "DALI_DEMO_STR_TITLE_ADVANCED_BLENDING"
+msgstr "Modo de fusión"
+
 msgid "DALI_DEMO_STR_TITLE_ANIMATED_IMAGES"
 msgstr "Imágenes animadas"
 
