--- a/resources/po/as.po
+++ b/resources/po/as.po
@@ -1,3 +1,6 @@
+msgid "DALI_DEMO_STR_TITLE_ADVANCED_BLENDING"
+msgstr "ফটোশ্বপ ব্লেণ্ড মোড"
+
 msgid "DALI_DEMO_STR_TITLE_ANIMATED_IMAGES"
 msgstr "অ্যানিমেটেড ইমেজ"
 
