--- a/resources/po/ur.po
+++ b/resources/po/ur.po
@@ -1,3 +1,6 @@
+msgid "DALI_DEMO_STR_TITLE_ADVANCED_BLENDING"
+msgstr "فوٹو شاپ بلینڈ موڈ"
+
 msgid "DALI_DEMO_STR_TITLE_ANIMATED_IMAGES"
 msgstr "متحرک تصاویر"
 
