Add perf sample with view creation.
Add sample for Control::New test.
Also, we can check control-creation time by ttrace.

We can disable this sample's ttrace by
export DALI_TRACE_PERF_VIEW_CREATION_SAMPLE=false

Change-Id: Ia2523a0a99400563efcde39fba2e304834cb1fba
Signed-off-by: Eunki, Hong <eunkiki.hong@samsung.com>

--- a/resources/po/en_GB.po
+++ b/resources/po/en_GB.po
@@ -169,6 +169,9 @@ msgstr "Particles"
 msgid "DALI_DEMO_STR_TITLE_PERF_SCROLL"
 msgstr "Scrolling Performance"
 
+msgid "DALI_DEMO_STR_TITLE_PERF_VIEW_CREATION"
+msgstr "Creation View Performance"
+
 msgid "DALI_DEMO_STR_TITLE_POINT_MESH"
 msgstr "Point Mesh"
 
