--- a/resources/po/en_GB.po
+++ b/resources/po/en_GB.po
@@ -205,8 +205,8 @@ msgstr "Reflection"
 msgid "DALI_DEMO_STR_TITLE_RENDERER_STENCIL"
 msgstr "Renderer Stencil"
 
-msgid "DALI_DEMO_STR_TITLE_SCENE_LOADER"
-msgstr "Scene Loader"
+msgid "DALI_DEMO_STR_TITLE_SCENE3D"
+msgstr "Scene3D"
 
 msgid "DALI_DEMO_STR_TITLE_SCRIPT_BASED_UI"
 msgstr "Script-based UI"
