Change ModelView to Model
Change-Id: Ic97da0b98c70fa175f2112213c8d473f7d602ec1
Signed-off-by: seungho <sbsh.baek@samsung.com>

--- a/resources/po/zn_CH.po
+++ b/resources/po/zn_CH.po
@@ -181,5 +181,5 @@ msgstr "Skybox"
 msgid "DALI_DEMO_STR_TITLE_PBR"
 msgstr "PBR"
 
-msgid "DALI_DEMO_STR_TITLE_SCENE3D_MODEL_VIEW"
-msgstr "Scene3D Model View"
+msgid "DALI_DEMO_STR_TITLE_SCENE3D_MODEL"
+msgstr "Scene3D Model"
