Inherit result demo
Test for Inherit properties behavior.

Change-Id: Idb78040e4a049720d66524bbf1b4031b95a94959
Signed-off-by: Eunki Hong <eunkiki.hong@samsung.com>

--- a/resources/po/as.po
+++ b/resources/po/as.po
@@ -61,6 +61,9 @@ msgstr "অনুবিম্ব Pixel Area"
 msgid "DALI_DEMO_STR_TITLE_IMAGE_VIEW_SVG"
 msgstr "অনুবিম্ব SVG"
 
+msgid "DALI_DEMO_STR_TITLE_INHERIT_TEST"
+msgstr "Inherit Test"
+
 msgid "DALI_DEMO_STR_TITLE_ITEM_VIEW"
 msgstr "আইটেম দর্শন"
 
