--- a/resources/po/fi.po
+++ b/resources/po/fi.po
@@ -61,6 +61,9 @@ msgstr "Kuvanäkymän Pikselialue"
 msgid "DALI_DEMO_STR_TITLE_IMAGE_VIEW_SVG"
 msgstr "SVG Kuvanäkymä"
 
+msgid "DALI_DEMO_STR_TITLE_INHERIT_TEST"
+msgstr "Inherit Test"
+
 msgid "DALI_DEMO_STR_TITLE_ITEM_VIEW"
 msgstr "Esinenäkymä"
 
