--- a/resources/po/en_US.po
+++ b/resources/po/en_US.po
@@ -214,6 +214,12 @@ msgstr "Renderer Stencil"
 msgid "DALI_DEMO_STR_TITLE_SCENE3D"
 msgstr "Scene3D"
 
+msgid "DALI_DEMO_STR_TITLE_SCENE3D_LIGHT"
+msgstr "Scene3D Light"
+
+msgid "DALI_DEMO_STR_TITLE_SCENE3D_MODEL"
+msgstr "Scene3D Model"
+
 msgid "DALI_DEMO_STR_TITLE_SCRIPT_BASED_UI"
 msgstr "Script-based UI"
 
@@ -324,5 +330,3 @@ msgstr "Text Bitmap Font"
 
 msgid "DALI_DEMO_STR_TITLE_WAVES"
 msgstr "Waves"
-msgid "DALI_DEMO_STR_TITLE_SCENE3D_MODEL"
-msgstr "Scene3D Model"
