Particle System Demo
Change-Id: Ib5cc186c001952c8f2f74c2371575a08d94bb607

--- a/resources/po/en_GB.po
+++ b/resources/po/en_GB.po
@@ -178,6 +178,9 @@ msgstr "Creation View Performance"
 msgid "DALI_DEMO_STR_TITLE_POINT_MESH"
 msgstr "Point Mesh"
 
+msgid "DALI_DEMO_STR_TITLE_PARTICLE_SYSTEM"
+msgstr "Particle System"
+
 msgid "DALI_DEMO_STR_TITLE_POPUP"
 msgstr "Popup"
 
