Add Render Pass Tag example
Change-Id: I66ae1484075c4ef905556feb2a2dd41e700395c6
Signed-off-by: seungho baek <sbsh.baek@samsung.com>

--- a/resources/po/en_US.po
+++ b/resources/po/en_US.po
@@ -289,6 +289,9 @@ msgstr "Visual Transitions"
 msgid "DALI_DEMO_STR_TITLE_REMOTE_IMAGE"
 msgstr "Remote Image"
 
+msgid "DALI_DEMO_STR_TITLE_RENDER_PASS_TAG"
+msgstr "Render Pass Tag"
+
 msgid "DALI_DEMO_STR_TITLE_RENDERING_TEXTURED_CUBE"
 msgstr "Textured cube"
 
