Added test for UniformBlocks
Test application shows uniform blocks in action in a custom shader,
and that properties can be used to write uniforms as normal.

Change-Id: Ibf6552084b491adf7fc6f05d5de0fe829ab5f58c
Signed-off-by: David Steele <david.steele@samsung.com>

--- a/resources/po/en_GB.po
+++ b/resources/po/en_GB.po
@@ -324,3 +324,6 @@ msgstr "Web View"
 
 msgid "DALI_DEMO_STR_TITLE_ANIMATED_VECTOR_IMAGES"
 msgstr "Animated Vector Images"
+
+msgid "DALI_DEMO_STR_TITLE_UNIFORM_BLOCKS"
+msgstr "Uniform Blocks"
