Added SceneView Example
Change-Id: I4aa9061ee5b4c64e2c8660935132fa9d6eaf593e

--- a/resources/po/en_GB.po
+++ b/resources/po/en_GB.po
@@ -211,6 +211,9 @@ msgstr "Reflection"
 msgid "DALI_DEMO_STR_TITLE_RENDERER_STENCIL"
 msgstr "Renderer Stencil"
 
+msgid "DALI_DEMO_STR_TITLE_SCENE_VIEW"
+msgstr "Scene View"
+
 msgid "DALI_DEMO_STR_TITLE_SCENE3D"
 msgstr "Scene3D"
 
