Add physics demo using chipmunk
Change-Id: I40d9fb813bbb7f6360bf1bbadcff4b976e9c47bb

--- a/resources/po/en_US.po
+++ b/resources/po/en_US.po
@@ -46,6 +46,9 @@ msgstr "Card Active"
 msgid "DALI_DEMO_STR_TITLE_COMPRESSED_TEXTURE_FORMATS"
 msgstr "Compressed Texture Formats"
 
+msgid "DALI_DEMO_STR_TITLE_CHIPMUNK_PHYSICS"
+msgstr "Chipmunk Physics"
+
 msgid "DALI_DEMO_STR_TITLE_CLIPPING"
 msgstr "Clipping"
 
