--- a/resources/po/en_US.po
+++ b/resources/po/en_US.po
@@ -337,6 +337,9 @@ msgstr "PBR"
 msgid "DALI_DEMO_STR_TITLE_WEB_VIEW"
 msgstr "Web View"
 
+msgid "DALI_DEMO_STR_TITLE_WINDOW"
+msgstr "Window"
+
 msgid "DALI_DEMO_STR_TITLE_ANIMATED_VECTOR_IMAGES"
 msgstr "Animated Vector Images"
 
