--- a/resources/po/en_US.po
+++ b/resources/po/en_US.po
@@ -310,6 +310,9 @@ msgstr "Visual Transitions"
 msgid "DALI_DEMO_STR_TITLE_REMOTE_IMAGE"
 msgstr "Remote Image"
 
+msgid "DALI_DEMO_STR_TITLE_RENDER_EFFECTS"
+msgstr "Render Effects"
+
 msgid "DALI_DEMO_STR_TITLE_RENDER_PASS_TAG"
 msgstr "Render Pass Tag"
 
