Add Scene3D::Panel example
Change-Id: I9e978e1952f132d1b367c688ecdedf43f95e3bc9
Signed-off-by: Seungho Baek <sbsh.baek@samsung.com>

--- a/resources/po/as.po
+++ b/resources/po/as.po
@@ -183,3 +183,6 @@ msgstr "PBR"
 
 msgid "DALI_DEMO_STR_TITLE_SCENE3D_MODEL"
 msgstr "Scene3D Model"
+
+msgid "DALI_DEMO_STR_TITLE_SCENE3D_PANEL"
+msgstr "Scene3D Panel"
