--- a/resources/po/zn_CH.po
+++ b/resources/po/zn_CH.po
@@ -186,3 +186,6 @@ msgstr "PBR"
 
 msgid "DALI_DEMO_STR_TITLE_SCENE3D_MODEL"
 msgstr "Scene3D Model"
+
+msgid "DALI_DEMO_STR_TITLE_SCENE3D_PANEL"
+msgstr "Scene3D Panel"
