Added a GlWindow example
Change-Id: I44b97051792d2b6a1b64591fa591dbf633286ba6

--- a/resources/po/en_GB.po
+++ b/resources/po/en_GB.po
@@ -103,6 +103,9 @@ msgstr "Flexbox Playground"
 msgid "DALI_DEMO_STR_TITLE_FRAME_CALLBACK"
 msgstr "Frame Callback"
 
+msgid "DALI_DEMO_STR_TITLE_GL_WINDOW"
+msgstr "GL Window"
+
 msgid "DALI_DEMO_STR_TITLE_HELLO_WORLD"
 msgstr "Hello World"
 
