--- a/resources/po/en_US.po
+++ b/resources/po/en_US.po
@@ -133,6 +133,9 @@ msgstr "Image View Alpha Blending"
 msgid "DALI_DEMO_STR_TITLE_IMAGE_VIEW_ENCODED_IMAGE_BUFFER"
 msgstr "Image View Encoded Image Buffer"
 
+msgid "DALI_DEMO_STR_TITLE_IMAGE_VIEW_EXTERNAL_TEXTURE"
+msgstr "Image View External Texture"
+
 msgid "DALI_DEMO_STR_TITLE_IMAGE_VIEW_PIXEL_AREA"
 msgstr "Image View Pixel Area"
 
