YUV format + FastTrackUploading test demo
Add YUV444, YUV420, YUV422 load demo and FastTrackUploading test

TODO : Need to add more resources to YUV testing

Change-Id: I004f67aca4bae45d0e4a2e5135e2b445545564c4
Signed-off-by: Eunki Hong <eunkiki.hong@samsung.com>

--- a/resources/po/en_GB.po
+++ b/resources/po/en_GB.po
@@ -139,6 +139,9 @@ msgstr "Image View Pixel Area"
 msgid "DALI_DEMO_STR_TITLE_IMAGE_VIEW_SVG"
 msgstr "Image View SVG"
 
+msgid "DALI_DEMO_STR_TITLE_IMAGE_VIEW_YUV"
+msgstr "Image View YUV"
+
 msgid "DALI_DEMO_STR_TITLE_INHERIT_TEST"
 msgstr "Inherit Test"
 
