--- a/resources/po/as.po
+++ b/resources/po/as.po
@@ -61,6 +61,9 @@ msgstr "অনুবিম্ব Pixel Area"
 msgid "DALI_DEMO_STR_TITLE_IMAGE_VIEW_SVG"
 msgstr "অনুবিম্ব SVG"
 
+msgid "DALI_DEMO_STR_TITLE_IMAGE_VIEW_YUV"
+msgstr "অনুবিম্ব YUV"
+
 msgid "DALI_DEMO_STR_TITLE_INHERIT_TEST"
 msgstr "Inherit Test"
 
