--- a/resources/po/es.po
+++ b/resources/po/es.po
@@ -61,6 +61,9 @@ msgstr "Control con imagenes con area de pixeles"
 msgid "DALI_DEMO_STR_TITLE_IMAGE_VIEW_SVG"
 msgstr "Control con imagenes SVG"
 
+msgid "DALI_DEMO_STR_TITLE_IMAGE_VIEW_YUV"
+msgstr "Control con imagenes YUV"
+
 msgid "DALI_DEMO_STR_TITLE_INHERIT_TEST"
 msgstr "Inherit Test"
 
