--- a/resources/po/ur.po
+++ b/resources/po/ur.po
@@ -61,6 +61,9 @@ msgstr "تصویر کنٹرول شفافیت کے ساتھ"
 msgid "DALI_DEMO_STR_TITLE_IMAGE_VIEW_SVG"
 msgstr "تصویر کنٹرول SVG"
 
+msgid "DALI_DEMO_STR_TITLE_IMAGE_VIEW_YUV"
+msgstr "تصویر کنٹرول YUV"
+
 msgid "DALI_DEMO_STR_TITLE_INHERIT_TEST"
 msgstr "Inherit Test"
 
