--- a/resources/po/zn_CH.po
+++ b/resources/po/zn_CH.po
@@ -64,6 +64,9 @@ msgstr "图像视图像素区域"
 msgid "DALI_DEMO_STR_TITLE_IMAGE_VIEW_SVG"
 msgstr "图像视图 SVG"
 
+msgid "DALI_DEMO_STR_TITLE_IMAGE_VIEW_YUV"
+msgstr "图像视图 YUV"
+
 msgid "DALI_DEMO_STR_TITLE_INHERIT_TEST"
 msgstr "Inherit Test"
 
