--- a/resources/po/en_US.po
+++ b/resources/po/en_US.po
@@ -187,6 +187,9 @@ msgstr "Motion Stretch"
 msgid "DALI_DEMO_STR_TITLE_NATIVE_IMAGE_SOURCE"
 msgstr "Native Image Source"
 
+msgid "DALI_DEMO_STR_TITLE_NATIVE_IMAGE_SOURCE_QUEUE"
+msgstr "Native Image Source Queue"
+
 msgid "DALI_DEMO_STR_TITLE_NEGOTIATE_SIZE"
 msgstr "Negotiate Size"
 
