--- a/resources/po/ko.po
+++ b/resources/po/ko.po
@@ -121,6 +121,9 @@ msgstr "늘이기"
 msgid "DALI_DEMO_STR_TITLE_NATIVE_IMAGE_SOURCE"
 msgstr "네이티브 이미지 소스"
 
+msgid "DALI_DEMO_STR_TITLE_NATIVE_IMAGE_SOURCE_QUEUE"
+msgstr "네이티브 이미지 소스 큐"
+
 msgid "DALI_DEMO_STR_TITLE_NEGOTIATE_SIZE"
 msgstr "사이즈 조절"
 
