Sample for hit test
Change-Id: I1167ee2fa88e9e1573e87da4fc7a68e0088b8751
Signed-off-by: Seungho Baek <sbsh.baek@samsung.com>

--- a/resources/po/en_GB.po
+++ b/resources/po/en_GB.po
@@ -319,6 +319,9 @@ msgstr "Remote Image"
 msgid "DALI_DEMO_STR_TITLE_RENDER_EFFECTS"
 msgstr "Render Effects"
 
+msgid "DALI_DEMO_STR_TITLE_TOUCH"
+msgstr "Touch Algorithm"
+
 msgid "DALI_DEMO_STR_TITLE_RENDER_PASS_TAG"
 msgstr "Render Pass Tag"
 
