Benchmark app for test Rendering performance
Previous benchmark.example have some heavy-animations.

Let we make more simple scene, so we can focus on Rendering performance.

Change-Id: I37a2d22fbcab2555a17e8d3d85fb4257eac32878
Signed-off-by: Eunki Hong <eunkiki.hong@samsung.com>

--- a/resources/po/en_GB.po
+++ b/resources/po/en_GB.po
@@ -19,6 +19,9 @@ msgstr "ImageView Benchmark"
 msgid "DALI_DEMO_STR_TITLE_BENCHMARK_2D_PHYSICS"
 msgstr "2D Physics Benchmark"
 
+msgid "DALI_DEMO_STR_TITLE_BENCHMARK_COLOR"
+msgstr "BackgroundColor Benchmark"
+
 msgid "DALI_DEMO_STR_TITLE_BEZIER_CURVE"
 msgstr "Bezier Curve"
 
