--- a/resources/po/en_US.po
+++ b/resources/po/en_US.po
@@ -19,6 +19,9 @@ msgstr "ImageView Benchmark"
 msgid "DALI_DEMO_STR_TITLE_BENCHMARK_2D_PHYSICS"
 msgstr "2D Physics Benchmark"
 
+msgid "DALI_DEMO_STR_TITLE_BENCHMARK_COLOR"
+msgstr "BackgroundColor Benchmark"
+
 msgid "DALI_DEMO_STR_TITLE_BEZIER_CURVE"
 msgstr "Bezier Curve"
 
