Add precompile-shader example
Change-Id: I816b78750343f06680277e91e513babc1bb5c79c

--- a/resources/po/en_GB.po
+++ b/resources/po/en_GB.po
@@ -214,6 +214,9 @@ msgstr "Pivot"
 msgid "DALI_DEMO_STR_TITLE_PRE_RENDER_CALLBACK"
 msgstr "Pre Render Callback"
 
+msgid "DALI_DEMO_STR_TITLE_PRECOMPILE_SHADER"
+msgstr "Precompile Shader"
+
 msgid "DALI_DEMO_STR_TITLE_PROGRESS_BAR"
 msgstr "Progress Bar"
 
