Spring AlphaFunction Sample
Change-Id: Iba86afa31057f4ce5731081f9834493482fd081b
Signed-off-by: Seungho Baek <sbsh.baek@samsung.com>

--- a/resources/po/as.po
+++ b/resources/po/as.po
@@ -130,6 +130,9 @@ msgstr "স্ক্ৰ'ল কৰক"
 msgid "DALI_DEMO_STR_TITLE_SPARKLE"
 msgstr "তাৰকা"
 
+msgid "DALI_DEMO_STR_TITLE_SPRING_ALPHAFUNCTION"
+msgstr "Spring AlphaFunction"
+
 msgid "DALI_DEMO_STR_TITLE_STYLING"
 msgstr "শৈলী"
 
