--- a/resources/po/en_US.po
+++ b/resources/po/en_US.po
@@ -280,6 +280,9 @@ msgstr "Simple Visuals Control"
 msgid "DALI_DEMO_STR_TITLE_SPARKLE"
 msgstr "Sparkle"
 
+msgid "DALI_DEMO_STR_TITLE_SPRING_ALPHAFUNCTION"
+msgstr "Spring AlphaFunction"
+
 msgid "DALI_DEMO_STR_TITLE_STYLING"
 msgstr "Styling"
 
