--- a/resources/po/ko.po
+++ b/resources/po/ko.po
@@ -154,6 +154,9 @@ msgstr "스크롤 뷰"
 msgid "DALI_DEMO_STR_TITLE_SPARKLE"
 msgstr "불꽃"
 
+msgid "DALI_DEMO_STR_TITLE_SPRING_ALPHAFUNCTION"
+msgstr "Spring AlphaFunction"
+
 msgid "DALI_DEMO_STR_TITLE_STYLING"
 msgstr "스타일링"
 
