--- a/resources/po/en_GB.po
+++ b/resources/po/en_GB.po
@@ -271,6 +271,9 @@ msgstr "Simple Visuals Control"
 msgid "DALI_DEMO_STR_TITLE_SPARKLE"
 msgstr "Sparkle"
 
+msgid "DALI_DEMO_STR_TITLE_SPRING_ALPHAFUNCTION"
+msgstr "Spring AlphaFunction"
+
 msgid "DALI_DEMO_STR_TITLE_STYLING"
 msgstr "Styling"
 
