--- a/resources/po/ur.po
+++ b/resources/po/ur.po
@@ -130,6 +130,9 @@ msgstr "سکرول ویو"
 msgid "DALI_DEMO_STR_TITLE_SPARKLE"
 msgstr "سٹار"
 
+msgid "DALI_DEMO_STR_TITLE_SPRING_ALPHAFUNCTION"
+msgstr "Spring AlphaFunction"
+
 msgid "DALI_DEMO_STR_TITLE_STYLING"
 msgstr "سٹائل"
 
