--- a/resources/po/zn_CH.po
+++ b/resources/po/zn_CH.po
@@ -70,6 +70,9 @@ msgstr "图像视图 YUV"
 msgid "DALI_DEMO_STR_TITLE_INHERIT_TEST"
 msgstr "Inherit Test"
 
+msgid "DALI_DEMO_STR_TITLE_INSTANCE_RENDERING"
+msgstr "Instance Rendering"
+
 msgid "DALI_DEMO_STR_TITLE_ITEM_VIEW"
 msgstr "项目视图"
 
