--- a/resources/po/ko.po
+++ b/resources/po/ko.po
@@ -88,6 +88,9 @@ msgstr "이미지 뷰 YUV"
 msgid "DALI_DEMO_STR_TITLE_INHERIT_TEST"
 msgstr "속성 전파 테스트"
 
+msgid "DALI_DEMO_STR_TITLE_INSTANCE_RENDERING"
+msgstr "인스턴스 렌더링"
+
 msgid "DALI_DEMO_STR_TITLE_ITEM_VIEW"
 msgstr "아이템 뷰"
 
