Add frame callback toggle example using ignored
Change-Id: I8be265650825e1dac0766e3dc55b72cbf51cad06
Signed-off-by: Seungho Baek <sbsh.baek@samsung.com>

--- a/resources/po/as.po
+++ b/resources/po/as.po
@@ -43,6 +43,9 @@ msgstr "Emoji"
 msgid "DALI_DEMO_STR_TITLE_FLEXBOX_PLAYGROUND"
 msgstr "Flexbox ডেমো"
 
+msgid "DALI_DEMO_STR_TITLE_FRAME_CALLBACK_TOGGLE"
+msgstr "Frame Callback Toggle"
+
 msgid "DALI_DEMO_STR_TITLE_IMAGE_FITTING_SAMPLING"
 msgstr "অনুবিম্ব ইজাৰ"
 
