Native image test app
Change-Id: I0f8821d58e0360021e724124c2be8e459e44da7e

--- a/resources/po/en_GB.po
+++ b/resources/po/en_GB.po
@@ -190,6 +190,9 @@ msgstr "Native Image Source"
 msgid "DALI_DEMO_STR_TITLE_NATIVE_IMAGE_SOURCE_QUEUE"
 msgstr "Native Image Source Queue"
 
+msgid "DALI_DEMO_STR_TITLE_NATIVE_IMAGE_TEST"
+msgstr "Native Image Test"
+
 msgid "DALI_DEMO_STR_TITLE_NEGOTIATE_SIZE"
 msgstr "Negotiate Size"
 
